Add gRPC server-client example

--- a/grpc/Makefile
+++ b/grpc/Makefile
@@ -1,5 +1,12 @@
-proto:
+gen_proto:
+	protoc --go_out=plugins=grpc:${GOPATH}/src proto/service/service.proto
 	protoc --go_out=${GOPATH}/src proto/message/message.proto
 
 run:
 	go run main.go
+
+run/server:
+	go run cmd/server/main.go
+
+run/client:
+	go run cmd/client/main.go
